--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>All you had to do was change this text CJ!</h1>
+    <h1>I’ll have two number 9s, a number 9 large, 
+        a number 6 with extra dip, a number 7, two number 45s, 
+        one with cheese, and a large soda.</h1>
     
 </body>
 </html>
